feat: 임시 fetch join문 작성

--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -7,8 +7,14 @@ spring.flyway.enabled=false
 
 # JPA
 spring.jpa.properties.hibernate.format_sql=true
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# logging
+logging.level.sql=debug
+logging.level.jdbc=debug
+logging.level.jdbc.sqlonly=debug
 
 # jwt
 jwt.token.secret-key=zzimkkong_secret_key_in_dev
