--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id "org.asciidoctor.convert" version "1.5.10"
     id 'java'
+    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'com.woowacourse'
@@ -14,6 +15,7 @@ repositories {
 }
 
 ext {
+    querydslPluginVersion = '1.0.10'
     snippetsDir = file('build/generated-snippets')
 }
 
@@ -46,6 +48,8 @@ dependencies {
     implementation 'org.apache.xmlgraphics:xmlgraphics-commons:2.4'
     implementation 'xml-apis:xml-apis:1.4.01'
     implementation 'xml-apis:xml-apis-ext:1.3.04'
+
+    implementation 'com.querydsl:querydsl-jpa'
 }
 
 test {
@@ -69,4 +73,23 @@ bootJar {
     from ("${asciidoctor.outputDir}/html5") {
         into 'static/docs'
     }
+}
+
+def querydslDir = "src/main/generated/querydsl"
+
+querydsl {
+    jpa = true
+    querydslSourcesDir = querydslDir
+}
+
+sourceSets {
+    main.java.srcDir querydslDir
+}
+
+configurations {
+    querydsl.extendsFrom compileClasspath
+}
+
+compileQuerydsl {
+    options.annotationProcessorPath = configurations.querydsl
 }
